# DSA-project

./: CMakeLists.txt  DataBase.c  DataBase.h  Element.c  Element.h  Interface.c  Interface.h  List.c  List.h  Node.c  Node.h  Record.h  ResultList.c  ResultList.h  Table.c  Table.h  Tree.c  Tree.h  main  main.c
